<resources>
    <string name="app_name">
KtFootball</string>
    <string name="text_cancel">cancel</string>
    <string name="text_capture">Camera</string>
    <string name="text_gallery">Select from album</string>
    <string name="wait_dialog_title">Requesting, please wait ...</string>
    <string name="request_method_not_allow">The requested method is not allowed by the server.</string>
    <string name="request_succeed">Request succeeded</string>
    <string name="request_failed">Data exception</string>
    <string name="train_details_text">In the form of comic action points will be completely analytical type of pre-compulsory course!</string>
    <string name="train_details_text_2_1">KTBall wants to practice in the square</string>
    <string name="train_details_text_2_2">But encountered a little girl to go to practice square dance, KT Leopard how to resolve this conflict it ...</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="download_error">download error：%1$s</string>
    <string name="download_error_server">Too many users are currently queued for download. Please try again later!</string>
    <string name="download_error_network">Network is not available, please check the network!</string>
    <string name="download_error_storage">"Translation Close Instant Translation English Chinese German Test Language Chinese (Simplified) English Japanese Translation Memory card error, please check the memory card! Memory card error, please check the memory card! Website Translator Global Business Insights About Google Translate Community Mobile Google About Us Privacy and Terms of Use Help Send Feedback "</string>
    <string name="download_error_space">There is not enough space on the memory card!</string>
    <string name="download_error_timeout">Download timeout!</string>
    <string name="download_error_un_know_host">The server was not found.</string>
    <string name="download_error_url">The URL address is incorrect.</string>
    <string name="download_error_argument">download parameter error</string>
    <string name="download_error_un">Position error</string>
    <string name="delete">delete</string>
    <string name="is_delete_comment">Delete comment?</string>
    <string name="right">determine</string>
    <string name="cancle">cancle</string>
    <string name="fighting_capacity">effective</string>
    <string name="is_send">is submitting</string>
    <string name="invitation">Invited</string>
    <string name="sned_invitation_success">Sending invitation is successful</string>
    <string name="ranking">Ranking</string>
    <string name="retry">Retry</string>
    <string name="network_connection_timeout">The network connection timed out</string>
    <string name="winning_probability">Win</string>
    <string name="kt">KT</string>
    <string name="score">Score</string>
    <string name="goal">Goal</string>
    <string name="wear_crotch">Crotch</string>
    <string name="is_loading">downloading</string>
    <string name="is_stop">Paused</string>
    <string name="is_waiting">Waiting...</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="is_cancle_follow">Whether to cancel attention？</string>
    <string name="xiadan_time">order time</string>
    <string name="is_refuse">rejected</string>
    <string name="is_agree">accepted</string>
    <string name="is_ok">completed</string>
    <string name="train">trained</string>
    <string name="distance_to_apprentice">there are apprentices from the distance</string>
    <string name="prompt">prompt</string>
    <string name="is_clear_class">Clear all the downloaded content of this course?</string>
    <string name="delete_success">delete success</string>
    <string name="delete_file_nofind">the deleted file does not exist</string>
    <string name="choose_three_dayago">Please select the date after three days!</string>
    <string name="choose_city">please choose city</string>
    <string name="no_find_service">The specified server was not found</string>
    <string name="url_wrong">URL error。</string>
    <string name="no_cache">No cache found.</string>
    <string name="client_cant_do">The system does not support the request method</string>
    <string name="noknow_error">unknown mistake</string>
    <string name="kt_monty">KT currency</string>
    <string name="please_choose_money">Please select the amount of recharge ~</string>
    <string name="pay_succsee">payment successful</string>
    <string name="all">all</string>
    <string name="yuan">yuan</string>
    <string name="is_paying">Payment result confirmation</string>
    <string name="pay_error">Payment failed</string>
    <string name="recharge_kt_money">Recharge K coins</string>
    <string name="open_gps">Please turn on GPS</string>
    <string name="game_address">Location</string>
    <string name="no_jiesao">No activity description</string>
    <string name="to"> to </string>
    <string name="kt_game_top">KT soccer tournament selection</string>
    <string name="signed_up">I have already signed up</string>
    <string name="choose_game">event selection</string>
    <string name="kt_game_vodep_top">KT soccer game video selection</string>
    <string name="search">search for</string>
    <string name="referee_choose">Referee selection</string>
    <string name="is_get_zhandui_message">Getting clan information</string>
    <string name="user_isin">User already exists</string>
    <string name="scan_again">Please scan again</string>
    <string name="enter_number_pwd">please enter an account number and password</string>
    <string name="wei_noinstall">WeChat is not installed, please install the WeChat</string>
    <string name="is_login">logging in</string>
    <string name="user_num_pwd_error">The user name and password are incorrect</string>
    <string name="suer_exit">OK to quit the application Well ~</string>
    <string name="is_add">added</string>
    <string name="is_update">Updating</string>
    <string name="team_name_empty">Team name can not be empty</string>
    <string name="team_type">Please select a team type</string>
    <string name="build_team_ok">build team success</string>
    <string name="is_build">Creating</string>
    <string name="restate_send">Seconds after the re-send</string>
    <string name="restart_yanzhen">Resend the verification code</string>
    <string name="phone_error">Malformed phone number</string>
    <string name="check_phone">please input mobile phone number</string>
    <string name="send_yanzhen">please enter verification code</string>
    <string name="send_pwd">Please enter a password</string>
    <string name="register_ok">Registration is successful, jump login page</string>
    <string name="send_user">Please enter a nickname or name</string>
    <string name="again_pwd_error">Two password entries are inconsistent</string>
    <string name="aggre_register">Please click here for registration and entry requirements</string>
    <string name="exit_ok">exit succsee</string>
    <string name="please_send_team_name">Please fill in the team name</string>
    <string name="modify_success">Successfully modified</string>
    <string name="upload_error">upload failed</string>
    <string name="upload_success">Uploaded successfully</string>
    <string name="cancle_follow">cancle follow</string>
    <string name="other_team">His clan</string>
    <string name="fans">fans</string>
    <string name="follow">attention</string>
    <string name="fighting_capacity_top">ranking</string>
    <string name="kt_1">KT rookie</string>
    <string name="kt_2">KT Apprentice</string>
    <string name="kt_3">KT of people</string>
    <string name="kt_4">KT Master</string>
    <string name="kt_5">KT Great God</string>
    <string name="my_dangan">My Profile</string>
    <string name="country_top">I have been in the KT football has been routed to the country</string>
    <string name="rank">rank</string>
    <string name="stop_upload">Pause the upload</string>
    <string name="continue_upload">continue uploading</string>
    <string name="all_upload">all uploads</string>
    <string name="exit_alw_upload">Sign out to suspend the upload</string>
    <string name="from_kt">From KT football</string>
    <string name="fightin_detail">Battle Details</string>
    <string name="cant_find_video">can\'t find video</string>
    <string name="kt_ball">KT football</string>
    <string name="in">in</string>
    <string name="my_order">My Order</string>
    <string name="my_get_order">I want to private</string>
    <string name="is_pay">Paid</string>
    <string name="wait_pingjia">To be evaluated</string>
    <string name="is_over">completed</string>
    <string name="order_status">Order Status</string>
    <string name="order_num">order number</string>
    <string name="none">no</string>
    <string name="order_detail">order details</string>
    <string name="wait_right">To be determined</string>
    <string name="wait_ok">To be completed</string>
    <string name="queren_pay">confirm payment</string>
    <string name="write_info">Fill in the information</string>
    <string name="write_user">Please fill in the contact</string>
    <string name="write_type">Please fill in the contact information</string>
    <string name="write_people_cont">Please fill in the number of activities</string>
    <string name="write_address">Please fill in your address</string>
    <string name="write_taitou">Please fill out the invoice</string>
    <string name="choose_time">choose data</string>
    <string name="start_area">Star zone</string>
    <string name="bind_phone_ok">bind phone_success~</string>
    <string name="yanzhenma_not_empty">Verification code can not be empty ~</string>
    <string name="write_nickname">Please fill in nickname</string>
    <string name="pwd_no_same">The input password is inconsistent ~</string>
    <string name="wtite_advice">Please fill in your feedback or suggestions, thank you</string>
    <string name="ok">carry out</string>
    <string name="user_name">Name</string>
    <string name="team_name">Team name</string>
    <string name="head">Avatar</string>
    <string name="team_name_write">Please fill in the team name</string>
    <string name="team_type_1">Team type</string>
    <string name="camera">camera</string>
    <string name="xiangche">Select from the album</string>
    <string name="address">address</string>
    <string name="cont1">score</string>
    <string name="time">time</string>
    <string name="about_us">about us</string>
    <string name="how_to_apply">How to participate in the KT football game</string>
    <string name="how_to_content">Please find the match button at the entrance, select the venue for registration, registration can be successful to the stadium for competition, you need to show your membership card, check my two-dimensional code, each game requires a certain KT coins deducted.</string>
    <string name="what_kt_b">What is the KT currency</string>
    <string name="erweima_look">View my 2D code</string>
    <string name="yijian">Feedback</string>
    <string name="lianxi_our">contact us</string>
    <string name="kt_ball_jiesao">KT Football Introduction</string>
    <string name="falu">legal provisions</string>
    <string name="nandu_chuji">Primary difficulty</string>
    <string name="nandu_zhongji">Intermediate difficulty</string>
    <string name="nandu_gaoji">Advanced difficulty</string>
    <string name="nandu_chuji_content">(For football-based poor, zero-based beginners)</string>
    <string name="nandu_zhongji_contgent">（Suitable for physical fitness is acceptable, there are some basic training)</string>
    <string name="nandu_gaoji_content">(For physical strength, there are some basic training)</string>
</resources>