<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/padding_widget_default">

    <LinearLayout
        android:id="@+id/dialog_starttrain_choose_chu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nandu_chuji"
            android:textColor="@color/train_start_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/nandu_chuji_content"
            android:textColor="@color/train_start_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#4e4e4e"/>

    <LinearLayout
        android:id="@+id/dialog_starttrain_choose_zhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_defauls_selector"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nandu_zhongji"
            android:textColor="@color/train_start_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/nandu_zhongji_contgent"
            android:textColor="@color/train_start_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#4e4e4e"/>

    <LinearLayout
        android:id="@+id/dialog_starttrain_choose_gao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_camera_selector"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nandu_gaoji"
            android:textColor="@color/train_start_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/nandu_gaoji_content"
            android:textColor="@color/train_start_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_widget_default"
        android:background="@drawable/photo_cancel_selector"
        android:padding="@dimen/padding_layout_default"
        android:text="@string/text_cancel"
        android:textColor="@color/train_start_text_color"
        android:textSize="16sp" />

</LinearLayout>