<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#f4f5f6"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imageView45"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="doBack"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/how_to_apply"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/layout_footballrecommend_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/how_to_content" />

        <TextView
            android:id="@+id/layout_footballrecommend_erweima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erweima_look"
            android:textColor="@color/setting_text_bt_color"
            android:layout_below="@+id/layout_footballrecommend_tv"/>

        <TextView
            android:id="@+id/layout_footballrecommend_ktbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/setting_text_bt_color"
            android:layout_below="@+id/layout_footballrecommend_tv"
            android:layout_toRightOf="@+id/layout_footballrecommend_erweima"
            android:text="@string/what_kt_b"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

</LinearLayout>