<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.NewTeamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout6">

        <RelativeLayout
        android:layout_width="44dp"
        android:layout_height="match_parent"
        android:onClick="doBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@drawable/retu" />
    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:id="@+id/textView36"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="doNewTeamFinsh"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:id="@+id/textView100"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/relativeLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout38">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:textSize="15dp"
            android:textColor="#333333"
            android:id="@+id/textView101"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView72"
            android:onClick="doGetPhoto"
            android:src="@mipmap/zhandui_add"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/relativeLayout38"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#dcdcdc"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/relativeLayout38"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout39">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textSize="15dp"
            android:textColor="#333333"
            android:id="@+id/textView102"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

         <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText10"
            android:hint="@string/team_name_write"
            android:textSize="13dp"
            android:background="@drawable/no_border"
             android:gravity="right|center_vertical"
            android:layout_centerVertical="true"
             android:textColor="#333333"
             android:textColorHint="#999999"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/relativeLayout39"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_type_1"
            android:textSize="15dp"
            android:textColor="#333333"
            android:id="@+id/textView103"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView73"
            android:src="@drawable/new_team_buttom"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:onClick="doSeleteType"
            android:padding="10dp"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_type"
            android:id="@+id/textView104"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageView73"
            android:textColor="#999999"
            android:textSize="13dp"
            android:layout_toStartOf="@+id/imageView73" />
    </RelativeLayout>

    <RelativeLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:visibility="gone"
        android:id="@+id/relativeLayout888"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/camera"
                android:onClick="doTakePhoto"
                android:textSize="20dp"
                android:textColor="@android:color/holo_blue_light"
                android:gravity="center"
                android:id="@+id/textView777"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:id="@+id/textView95" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/xiangche"
                android:textSize="20dp"
                android:onClick="doSeletePhoto"
                android:textColor="@android:color/holo_blue_light"
                android:gravity="center"
                android:id="@+id/textView788"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:id="@+id/textView1044" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cancle"
                android:onClick="doCanal"
                android:textSize="20dp"
                android:textColor="@android:color/holo_blue_light"
                android:gravity="center"
                android:id="@+id/textView799"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
