<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f5f6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="doBack"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about_us"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_set_js"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:text="@string/kt_ball_jiesao"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="15dp"/>

    <RelativeLayout
        android:id="@+id/layout_set_fltw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:text="@string/falu"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="15dp"/>

    <RelativeLayout
        android:id="@+id/layout_set_lxwm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:text="@string/lianxi_our"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="15dp"/>

    <RelativeLayout
        android:id="@+id/layout_set_yjfk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:text="@string/yijian"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_right"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"/>
    </RelativeLayout>



</LinearLayout>